# cam_3d_reconstruction

./: .gitignore  CMakeLists.txt  README.md
cam-3d-reconstruction/depth_to_points/: .gitignore  CMakeLists.txt  README.md
cam-3d-reconstruction/depth_to_points/examples/: depth_files.txt
cam-3d-reconstruction/depth_to_points/examples/src/: multi_frame.cpp  one_frame.cpp  test_multi_frame.cpp  test_one_frame.cpp
cam-3d-reconstruction/depth_to_points/include/: depth_to_points.h  files_handler.h  rotation_handler.h  timestamp_to_pose.h
cam-3d-reconstruction/depth_to_points/src/: depth_to_points.cpp  timestamp_to_pose.cpp
depth_to_points/: .gitignore  CMakeLists.txt
depth_to_points/examples/: CMakeLists.txt  multi_frame.cpp  one_frame.cpp  test_PointCloudSaver.cpp  test_depth_to_points.cpp  test_timestamp_to_pose.cpp
depth_to_points/examples/src/: one_frame.cpp
depth_to_points/include/: depth_to_points.h  npy.h  rotation_handler.h  timestamp_to_pose.h
depth_to_points/src/: CMakeLists.txt  depth_to_points.cpp  rotation_handler.cpp  timestamp_to_pose.cpp
doc/: cn_cam_3d_reconstruction.md  en_cam_3d_reconstruction.md
monodepth2_autowise/: .gitignore  depth_prediction_example.ipynb  inference.py  options.py  test_delete.py  train.py  trainer.py
monodepth2_autowise/datasets/: __init__.py  autowise_dataset.py
monodepth2_autowise/experiments/: autowise_experiments.sh  kitti_raw_experiments.sh  run_inference.sh
postprocess_data/: CMakeLists.txt
postprocess_data/delete_ghost_mask_jpeg/: delete_ghost_mask_jpeg.cpp
postprocess_data/depth_npy_to_jpeg/: depth_npy_to_jpeg.cpp
postprocess_data/depth_to_points/: CMakeLists.txt  multi_frame.cpp  one_frame.cpp
postprocess_data/include/: pc_tools.h
postprocess_data/mask/: CMakeLists.txt  remove_small_mask.cpp
postprocess_data/npy/: CMakeLists.txt  depth_npy_to_jpeg.cpp  depth_npy_to_tiff.cpp
postprocess_data/pointcloud/: CMakeLists.txt  icp.cpp  optimize_pose_with_pc.cpp  pc_tools.cpp  test.cpp
postprocess_data/remove_small_mask/: remove_small_mask.cpp
postprocess_data/remove_small_mask_npy/: remove_small_mask_npy.cpp
prepare_dataset/: .gitignore  CMakeLists.txt
prepare_dataset/examples/: CMakeLists.txt  crop_images.cpp  extract_poses  extract_poses.cpp  make_train_val_files  make_train_val_files.cpp  mask_moving_objects.cpp  poses.txt  process_images.cpp  process_npy_mask.cpp  relative_to_absolute_poses.cpp  remove_static_scene.cpp  rename_files.cpp
prepare_dataset/examples/src/: crop_images.cpp  extract_poses.cpp  make_train_val_files.cpp  relative_to_absolute_poses.cpp  undistort_images.cpp
prepare_dataset/handler/: CMakeLists.txt  files_handler.cpp  gps_handler.cpp  images_handler.cpp  opticalFlow_handler.cpp  poses_handler.cpp
prepare_dataset/image/: CMakeLists.txt  downsample_images.cpp
prepare_dataset/include/: files_handler.h  gps2utm.h  gps_handler.h  images_handler.h  opticalFlow_handler.h  poses_handler.h  timestamp_to_pose.h  utm.h
prepare_dataset/mask/: CMakeLists.txt  delete_ghost_mask.cpp  remove_small_mask.cpp  remove_static_scene.cpp
prepare_dataset/others/: CMakeLists.txt  make_train_val_files.cpp  remove_static_scene.cpp
prepare_dataset/pose/: CMakeLists.txt  extract_absolute_poses.cpp  extract_poses.cpp  extract_relative_poses.cpp  extract_relative_translation.cpp
prepare_dataset/src/: files_handler.cpp  gps_handler.cpp  images_handler.cpp  poses_handler.cpp
process_images/: CMakeLists.txt
process_images/examples/: CMakeLists.txt  main.cpp  process_images.cpp
process_images/include/: process_image_tools.h
process_images/src/: process_image_tools.cpp
scripts/: run_crop_images.sh  run_depth_npy_to_tiff.sh  run_downsample_images.sh  run_extract_absolute_poses.sh  run_extract_relative_poses.sh  run_extract_relative_translation.sh  run_make_train_val_files.sh  run_remove_small_mask.sh  run_remove_static_scene.sh  run_test_multi_frame.sh  run_test_one_frame.sh  run_undistort_images.sh
